Patches for test file

--- a/ipyrun/ipyrun.ipynb
+++ b/ipyrun/ipyrun.ipynb
@@ -305,7 +305,7 @@
     "            #    d.preview_fpth()\n",
     "                \n",
     "            fpths = [v for k,v in self.fpths_outputs.items()]\n",
-    "            \n",
+    "\n",
     "            if 'display_ignore' in self.config:\n",
     "                display_ignore = self.config['display_ignore']\n",
     "            else:\n",
@@ -315,14 +315,18 @@
     "                display_prefix = self.config['display_prefix']\n",
     "            else:\n",
     "                display_prefix = ''\n",
-    "                \n",
+    "\n",
     "            if len(fpths)==0:\n",
     "                display(Markdown('select the file(s) that you would like to display from the \"outputs\" list above '))\n",
     "            else:\n",
+    "                with open(\"fpths_bef.txt\", \"w\") as text_file:\n",
+    "                    print(\"{0}\".format(fpths), file=text_file)\n",
+    "\n",
     "                for f in fpths:\n",
-    "                    if not os.path.isfile(f):\n",
-    "                        #print(f)\n",
+    "                    if not os.path.isfile(f) and not os.path.isdir(f):\n",
     "                        fpths.remove(f)\n",
+    "                with open(\"fpths_aft.txt\", \"w\") as text_file:\n",
+    "                    print(\"{0}\".format(fpths), file=text_file)\n",
     "                display(DisplayFiles(fpths, fpths_ignore=display_ignore, fpth_prefix=display_prefix))\n",
     "\n",
     "    def _show_log(self, sender):\n",
