--- a/ipyrun/_ipyeditjson.ipynb
+++ b/ipyrun/_ipyeditjson.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,6 +245,14 @@
     "        # UPDATE THIS - LIST OF WIDGETS NOT TO WATCH\n",
     "        if self.widget_name not in self.dont_watch:\n",
     "            self._init_controls()\n",
+    "            \n",
+    "    @property\n",
+    "    def value(self): \n",
+    "        return self.widget_row.children[1].children[0].value\n",
+    "    \n",
+    "    @value.setter\n",
+    "    def value(self, value):\n",
+    "        self.widget_row.children[1].children[0].value = value \n",
     "            \n",
     "    def _kwargfilt(self):\n",
     "        \"\"\"\n",
@@ -504,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 63,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -579,6 +587,16 @@
     "        for l in self.li_apps:\n",
     "            self.widgets.append(l['app'](l['config']))\n",
     "        self._layout()\n",
+    "        \n",
+    "    @property\n",
+    "    def li_values(self): \n",
+    "        return [w.widget_row.children[1].children[0].value for w in self.widgets]\n",
+    "    \n",
+    "    @li_values.setter\n",
+    "    def li_values(self, li_values):\n",
+    "        for n in range(0,len(li_values)):\n",
+    "            self.widgets[n].widget_row.children[1].children[0].value = li_values[n]\n",
+    "\n",
     "        \n",
     "    def _update_label(self, index, l):\n",
     "        \"\"\"\n",
@@ -870,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +918,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d3036dfd5624469690bd3ec55dfe10b2",
+       "model_id": "df93e49ebb7c40baafe999ff12d70dad",
        "version_major": 2,
        "version_minor": 0
       },
@@ -914,7 +932,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1db796166495409595530d9c717f859b",
+       "model_id": "44256a133fe6446f8e947c16c0b08844",
        "version_major": 2,
        "version_minor": 0
       },
@@ -928,7 +946,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a37331bd9be648ac83a8e9be79c0b8cf",
+       "model_id": "644368c39f344da29d3ee7296ff59eea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -942,7 +960,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20dff00093c2423aa6e6112cce071a38",
+       "model_id": "084e048536d34ed3806e19de98a16ead",
        "version_major": 2,
        "version_minor": 0
       },
@@ -956,7 +974,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "34120e0804d4496e8be4995bd1905bd9",
+       "model_id": "d6643d7b08c6469f98fb68661679af33",
        "version_major": 2,
        "version_minor": 0
       },
@@ -970,7 +988,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "927fc025ee174584ab20009d2b11e625",
+       "model_id": "2dbbab89f19d4186b406088df5082c1f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -984,7 +1002,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf835c53a28a4af68c156e31e0901edd",
+       "model_id": "58ee762447744f8db2c9ada881748572",
        "version_major": 2,
        "version_minor": 0
       },
@@ -998,7 +1016,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1885180e9877466b8f9d081b2fa64f95",
+       "model_id": "99311a5d1af246fea35efef0486cec8c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1058,7 +1076,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2406e902788140f998420b32da42ed06",
+       "model_id": "c374f98361484c8695398d04ed4cfab0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1072,7 +1090,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5c3f3b3c4d9347ada36ff4f9c41ddda7",
+       "model_id": "37c34e5282de461582cc05a4af4cd1f5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1086,7 +1104,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4132e3e5ef9c4e928ef678ee5be3b138",
+       "model_id": "e7869818418b45d89c059a62c6871642",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1100,7 +1118,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e4081dcc5d0044ad9f9da214c1b646c3",
+       "model_id": "27593c67f48a4c6a8336fe0a4c16310d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1160,7 +1178,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6bf1a94d70ac40d6accd66b67e2b4ab3",
+       "model_id": "23bf2912a2124d2b9cc2ec6d015f1ea0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1174,7 +1192,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "21d0c252da6140758838022951387cd2",
+       "model_id": "2334f58185434e258b26e9d00f460742",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1188,7 +1206,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "11412f06edb54bb2a485b56badf63767",
+       "model_id": "3960b42313354fbf83b4cd9e0c2371c7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1248,7 +1266,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "762ff187c5d2420a9e81952d673bed15",
+       "model_id": "cd9c63989b3a4b5c9aa2790f742405d6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1262,7 +1280,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "58fff060117d4498b8da3de38138f09d",
+       "model_id": "fc6c6e12f1ab4d9887f84a0f7fa69487",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1276,7 +1294,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c6eb2d7b02146fd9bb9c7b6e9ff9b97",
+       "model_id": "7d7d8a15439044e182091a463a0e3000",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1348,7 +1366,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9782f12fbcbd4f368ceceae41c538cdb",
+       "model_id": "6c36e563c1b440f89532404049f869f7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1362,7 +1380,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b6e14f480cae4bdd829bedc25a2c2a65",
+       "model_id": "f16e4921f8cb4146a6d1d9567240d3bf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1376,7 +1394,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "937855c7467542a4b455b817a072c751",
+       "model_id": "4ab1dd76eb3c479984e8c1d4b1b26ba1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1390,7 +1408,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "def89d461ef54c3da2af8f7b0e3b625f",
+       "model_id": "b9f4e421d01e4f93838d88bb50766701",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1404,7 +1422,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "25277f3e399740ae9d9359cf84c67e5d",
+       "model_id": "60c5a7962a53473a9b7f04c8d3d41a5d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1418,7 +1436,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "23272ab816ee4ca3b1be64100840de14",
+       "model_id": "05d9e02e78024e2795a55f72a78aab06",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1432,7 +1450,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5f1b566715634c6b9908e8a6ecd6fcd1",
+       "model_id": "135e03b3f9ee41f99a22d3893af42135",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1446,7 +1464,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "987191d450db4a619141db9cb81cd34d",
+       "model_id": "5cf36ecd6961483da247704220c00c7e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1460,7 +1478,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea95686f42dd44598c6c7da3f4591d3f",
+       "model_id": "7d6e33a03f88466daaa69e9e0a16158f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1474,7 +1492,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be18ceb4eb03440ca4cac7e0cf8513f3",
+       "model_id": "e680e7d1e31f47e089424dcb0fd4f2c9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1488,7 +1506,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "21d61a0df62746efa354e4799b9d3f76",
+       "model_id": "50c1bfd092f448738d20649b2fbdeafb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1502,7 +1520,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d39f7331996046cda62b24fe0171e267",
+       "model_id": "cff4558d33ab4b4dbaf588eb36e863bf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1516,7 +1534,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "356fb5bb8b204db88a4d7223ec769553",
+       "model_id": "4585a848e9c64e599e677bc27c699240",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1530,7 +1548,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b82d3d82b23341d09adb782164b8b71d",
+       "model_id": "ffff655836be4d14b94c3c1e945d5e87",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1590,7 +1608,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ffa7ce5cc07841c08682bb86fcb933a5",
+       "model_id": "2c83aa10a47843f3a2d47a243ea83c0a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1604,7 +1622,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f8e4726ea2624756b9e74ae3e2c0057c",
+       "model_id": "c4827a6c41564cdab99d44891de7d152",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1618,7 +1636,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d21b7cdbdf57498cb832606a1a92b17d",
+       "model_id": "a5fd5fc3e22645be9d9769312bdfbe10",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1678,7 +1696,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a4c36d83c1824ec9a613d49becf6d865",
+       "model_id": "12e074a096da4c3cba53caf8844cc738",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1692,7 +1710,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "abbc833e4f364677950e48c88e0933f9",
+       "model_id": "2da0e65173dc4072be3a586698997455",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1752,7 +1770,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa0cedfaae3544e48bf69525ef5ea683",
+       "model_id": "1e0924d877774f48997bd915a644f9fd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1766,7 +1784,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1603aa5643df435c948db496e764b630",
+       "model_id": "be1c26f1dd0741e1a04234ebef05a604",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1780,7 +1798,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20e8b5b0a7434d7b9034b2c0189ccdc5",
+       "model_id": "7f8f5077a62f45869a9deb0d84076c65",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1928,13 +1946,6 @@
     "    display(Markdown('---'))  \n",
     "    display(Markdown('')) "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1942,7 +1953,7 @@
    "formats": "ipynb,py:light"
   },
   "kernelspec": {
-   "display_name": "Python [conda env:mf_main]",
+   "display_name": "Python [conda env:mf_main] *",
    "language": "python",
    "name": "conda-env-mf_main-py"
   },
