--- a/ipyrun/_ipydisplayfile.ipynb
+++ b/ipyrun/_ipydisplayfile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,10 +342,10 @@
     "        #print(self.outputsfpth.value)\n",
     "        display(Markdown(''))\n",
     "        for file in self.outputsfpth.value:\n",
-    "            display(Markdown('AAA: #### {0}'.format(os.path.splitext(os.path.basename(file))[0])))\n",
+    "            display(Markdown('#### {0}'.format(os.path.splitext(os.path.basename(file))[0])))\n",
     "            s = str(self.map_previews[file]._map[self.map_previews[file].ext])\n",
     "            if 'DisplayFile._open_option' not in s:\n",
-    "                display(Markdown('`BBB: {0}`'.format(self.map_fpths[file])))\n",
+    "                display(Markdown('`{0}`'.format(self.map_fpths[file])))\n",
     "            self.map_previews[file].preview_fpth()\n",
     "\n",
     "    def _show_hide(self, sender):\n",
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -399,7 +399,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20e92da94a7c4d7295b43c75643ddfb0",
+       "model_id": "e041954fe6f045b8a4a9147bc929106f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -468,7 +468,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1c6736922cd04b0eaaf70bf74f712055",
+       "model_id": "b3e0e483b6d441d186977cf05cc0806c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -482,12 +482,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82906614987e4827b8aec9c051a50742",
+       "model_id": "3152f8ec645f46a1a7850bfe77db38ef",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "SelectMultiple(layout=Layout(flex_flow='column', height='auto', width='auto'), options=('eg_YAML.YAML', 'eg_cs…"
+       "SelectMultiple(layout=Layout(height='auto', width='30%'), options=('eg_YAML.YAML', 'eg_csv.csv', 'eg_jpg_1.jpg…"
       ]
      },
      "metadata": {},
@@ -496,7 +496,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "63b4ff2ff8484b09b20bd76cac0cda46",
+       "model_id": "bcdb666cf4ae452da66c9c3cf2571e11",
        "version_major": 2,
        "version_minor": 0
       },
@@ -556,7 +556,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a2d9fab02fcf45b888a3ca97c1d0f9d5",
+       "model_id": "e9eeb92163434fc8a5e40734f84126a2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -570,12 +570,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "36d3086befd146e6a16011a4ca5f81aa",
+       "model_id": "b2751b4776274d51bfe996e14978a5c9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "SelectMultiple(layout=Layout(flex_flow='column', height='auto', width='auto'), options=('eg_jpg_1.jpg', 'eg_jp…"
+       "SelectMultiple(layout=Layout(height='auto', width='30%'), options=('eg_jpg_1.jpg', 'eg_jpg_2.jpg', 'eg_jpg_3.j…"
       ]
      },
      "metadata": {},
@@ -584,7 +584,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "40d4813039a04ccdbed15ce8edee52fa",
+       "model_id": "74201ac64d1e4666ae6e06db2c2fe2b8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -622,7 +622,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f8165052065b4a6fa398ba6c83fe9407",
+       "model_id": "9c46c779996f4dbb97fa75a1c3cd37cd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -636,12 +636,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3ae52391c2840598a9f58b8582873c6",
+       "model_id": "aa4333156a3b46318d8d11bb22d78da7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "SelectMultiple(layout=Layout(flex_flow='column', height='auto', width='auto'), options=('eg_jpg_1.jpg', 'eg_jp…"
+       "SelectMultiple(layout=Layout(height='auto', width='30%'), options=('eg_jpg_1.jpg', 'eg_jpg_2.jpg', 'eg_jpg_3.j…"
       ]
      },
      "metadata": {},
@@ -650,7 +650,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "26abea3507884dd48d346a7f06c2dd6c",
+       "model_id": "3f8967bce27d4787bd9a69e9baa8b186",
        "version_major": 2,
        "version_minor": 0
       },
@@ -710,29 +710,6 @@
     "    display(Markdown('''example, with fpths_ignore and fpth_prefix'''))\n",
     "    display(d3)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
