--- a/ipyrun/ipyrun.ipynb
+++ b/ipyrun/ipyrun.ipynb
@@ -501,7 +501,6 @@
     "\n",
     "    def _fpth_inputs(self, process_name=None, template_process=None):\n",
     "        \n",
-    "        \n",
     "        if process_name:\n",
     "            name = process_name + '.json'\n",
     "        else:\n",
@@ -513,8 +512,11 @@
     "            src = self.fpth_template_input\n",
     "        \n",
     "        dstn = os.path.join(self.fdir_inputs, name)\n",
-    "        if not os.path.isfile(dstn):\n",
+    "        if not os.path.isfile(dstn) or not process_name:\n",
     "            copyfile(src, dstn)\n",
+    "            \n",
+    "        with open(name + \".txt\", \"w\") as text_file:\n",
+    "            print(\"src - {0}\\ndstn - {1}\\nisfile - {2}\\nprocess_name - {3}\\ntemplate_process - {4}\".format(src, dstn, os.path.isfile(dstn), process_name, template_process), file=text_file)\n",
     "        return dstn\n",
     "    \n",
     "class RunAppsTemplated():\n",
