--- a/ipyrun/_ipyeditjson.ipynb
+++ b/ipyrun/_ipyeditjson.ipynb
@@ -493,8 +493,8 @@
     "    def _file_chooser(self):\n",
     "        \n",
     "        if 'value' in self.kwargs:\n",
-    "            path = os.path.realpath(self.kwargs['value'])\n",
-    "            fc_temp = FileChooser(filename=path, select_default=True)\n",
+    "            splitpath = os.path.split(os.path.realpath(self.kwargs['value']))\n",
+    "            fc_temp = FileChooser(filename=splitpath[1], path=splitpath[0], select_default=True)\n",
     "        else:\n",
     "            fc_temp = FileChooser()\n",
     "        fc_temp.use_dir_icons = True\n",
@@ -1953,7 +1953,7 @@
    "formats": "ipynb,py:light"
   },
   "kernelspec": {
-   "display_name": "Python [conda env:mf_main] *",
+   "display_name": "Python [conda env:mf_main]",
    "language": "python",
    "name": "conda-env-mf_main-py"
   },
