--- a/ipyrun/ipyrun_overheating.ipynb
+++ b/ipyrun/ipyrun_overheating.ipynb
@@ -7,7 +7,25 @@
     "lines_to_end_of_cell_marker": 2,
     "lines_to_next_cell": 2
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'halo'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-2810c27ba48c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 31\u001b[1;33m     \u001b[1;32mfrom\u001b[0m \u001b[0mipyrun\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_runconfig\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mRunConfig\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     32\u001b[0m     \u001b[1;32mfrom\u001b[0m \u001b[0mipyrun\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_ipyeditcsv\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mEditCsv\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\engDev\\git_mf\\ipyrun\\ipyrun\\ipyrun.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 26\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mhalo\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mHaloNotebook\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     27\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtraceback\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'halo'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-2810c27ba48c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     39\u001b[0m     \u001b[1;32mfrom\u001b[0m \u001b[0m_ipyeditjson\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mEditJson\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     40\u001b[0m     \u001b[1;32mfrom\u001b[0m \u001b[0m_ipydisplayfile\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mDisplayFile\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mDisplayFiles\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 41\u001b[1;33m     \u001b[1;32mfrom\u001b[0m \u001b[0mipyrun\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mRunApp\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mRunConfigTemplated\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mRunAppsTemplated\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     42\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     43\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mget_mfuser_initials\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\engDev\\git_mf\\ipyrun\\ipyrun\\ipyrun.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mimportlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mutil\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 26\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mhalo\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mHaloNotebook\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     27\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtraceback\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0msys\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'halo'"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "NBFDIR = os.path.dirname(os.path.realpath('__file__'))\n",
@@ -58,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +254,6 @@
     "                        li['editable'] = False\n",
     "                        li['widget'] = \"ipyagrid\"\n",
     "                        li['value'] = fsum.to_json(orient=\"columns\")\n",
-    "                        \n",
     "                        '''for index, row in fsum.iterrows():\n",
     "                            tmplabel = copy.copy(textlabel)\n",
     "                            tmplabel['name'] = 'U Value'\n",
@@ -283,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -368,11 +385,11 @@
     "        def parse_inputs(values, inputs, name):\n",
     "            # Input parse for JSON file\n",
     "            for l in values:\n",
-    "                if type(l['value']) is list:\n",
-    "                    inputs = parse_inputs(l['value'], inputs, l['name'])\n",
-    "                else:\n",
-    "                    if name != 'Linked Files' and name !='Refs':\n",
-    "                        inputs[l['name']] = [l['value']]\n",
+    "                if l['name'] != 'Linked Files' and l['name'] !='Refs' and l['name'] !='Model File Path' and l['name'] != 'Fabrics - Breakdown':\n",
+    "                    if type(l['value']) is list:\n",
+    "                        inputs = parse_inputs(l['value'], inputs, l['name'])\n",
+    "                    else:\n",
+    "                            inputs[l['name']] = [l['value']]\n",
     "            return inputs\n",
     "            \n",
     "        def unique_row(series):\n",
@@ -525,6 +542,15 @@
     "            display(self.comp_out_btn)\n",
     "            display(fig)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
