update to enable IFrame and pdf

--- a/ipyrun/_ipydisplayfile.ipynb
+++ b/ipyrun/_ipydisplayfile.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "from IPython.display import display, Image, JSON, Markdown, HTML, display_pdf, clear_output\n",
+    "from IPython.display import display, Image, JSON, Markdown, HTML, IFrame, clear_output\n",
     "import time\n",
     "from ipyaggrid import Grid\n",
     "import ipywidgets as widgets\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
     "            #'.txt':self.txt_prev,\n",
     "            '.md':self.md_prev,\n",
     "            '.py':self.py_prev,\n",
-    "            '.pdf':self._open_option,\n",
+    "            '.pdf':self.pdf_prev,\n",
     "            '.docx':self._open_option,\n",
     "        }\n",
     "\n",
@@ -221,6 +221,9 @@
     "        self.text.value = markdown('opening: `{0}`'.format(self.fpth))\n",
     "        time.sleep(5)\n",
     "        self.text.value = markdown('`{0}`'.format(self.fpth))\n",
+    "        \n",
+    "    def pdf_prev(self):\n",
+    "        display(IFrame(self.fpth, width=1000, height=600))\n",
     "\n",
     "    def df_prev(self):\n",
     "        \"\"\"\n",
@@ -283,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,6 +321,7 @@
     "        self.fnms = [os.path.basename(fpth) for fpth in self.fpths];\n",
     "        self._init_previews()\n",
     "        self._init_form()\n",
+    "        \n",
     "        self._init_controls()\n",
     "\n",
     "    def _init_previews(self):\n",
@@ -333,6 +337,9 @@
     "        self.show_hide = widgets.ToggleButton(description='display/hide files',\n",
     "                              tooltip='shows and hides display outputs of the files selected in the SelectMultiple dropdown menu',\n",
     "                              button_style='success')\n",
+    "        self.ui = widgets.VBox([self.show_hide,\n",
+    "                      self.outputsfpth,\n",
+    "                      self.out])\n",
     "\n",
     "    def _init_controls(self):\n",
     "        self.show_hide.observe(self._show_hide, 'value')\n",
@@ -357,9 +364,9 @@
     "                pass\n",
     "\n",
     "    def display(self):\n",
-    "        display(self.show_hide)\n",
-    "        display(self.outputsfpth)\n",
-    "        display(self.out)\n",
+    "        display(self.ui)\n",
+    "        #display(self.outputsfpth)\n",
+    "        #display(self.out)\n",
     "\n",
     "    def _ipython_display_(self):\n",
     "        self.display()"
@@ -367,7 +374,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fpths=[os.path.join(os.environ['mf_root'],r'ipyrun\\data\\eg_filetypes\\eg_plotly.plotly')]\n",
+    "#d = DisplayFiles(fpths)\n",
+    "#d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -399,12 +417,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e041954fe6f045b8a4a9147bc929106f",
+       "model_id": "7262bc0d2c224a20b23d2d7feddb9b1b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(Button(button_style='success', description='open file', style=ButtonStyle()), HTML(value='<p><c…"
+       "Grid(columns_fit='size_to_fit', compress_data=True, export_mode='disabled', height='350px', menu={'buttons': […"
       ]
      },
      "metadata": {},
@@ -468,40 +486,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b3e0e483b6d441d186977cf05cc0806c",
+       "model_id": "507bb1a328914903998f0b4c7637b7d2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "ToggleButton(value=False, button_style='success', description='display/hide files', tooltip='shows and hides d…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3152f8ec645f46a1a7850bfe77db38ef",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "SelectMultiple(layout=Layout(height='auto', width='30%'), options=('eg_YAML.YAML', 'eg_csv.csv', 'eg_jpg_1.jpg…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bcdb666cf4ae452da66c9c3cf2571e11",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
+       "VBox(children=(ToggleButton(value=False, button_style='success', description='display/hide files', tooltip='sh…"
       ]
      },
      "metadata": {},
@@ -556,40 +546,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e9eeb92163434fc8a5e40734f84126a2",
+       "model_id": "e09d65ddc74448dc9fbc16b429cb3500",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "ToggleButton(value=False, button_style='success', description='display/hide files', tooltip='shows and hides d…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b2751b4776274d51bfe996e14978a5c9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "SelectMultiple(layout=Layout(height='auto', width='30%'), options=('eg_jpg_1.jpg', 'eg_jpg_2.jpg', 'eg_jpg_3.j…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "74201ac64d1e4666ae6e06db2c2fe2b8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
+       "VBox(children=(ToggleButton(value=False, button_style='success', description='display/hide files', tooltip='sh…"
       ]
      },
      "metadata": {},
@@ -622,40 +584,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c46c779996f4dbb97fa75a1c3cd37cd",
+       "model_id": "314f12e452394653b41649d556658289",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "ToggleButton(value=False, button_style='success', description='display/hide files', tooltip='shows and hides d…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa4333156a3b46318d8d11bb22d78da7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "SelectMultiple(layout=Layout(height='auto', width='30%'), options=('eg_jpg_1.jpg', 'eg_jpg_2.jpg', 'eg_jpg_3.j…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f8967bce27d4787bd9a69e9baa8b186",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
+       "VBox(children=(ToggleButton(value=False, button_style='success', description='display/hide files', tooltip='sh…"
       ]
      },
      "metadata": {},
@@ -714,6 +648,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -724,7 +667,7 @@
    "formats": "ipynb,py:light"
   },
   "kernelspec": {
-   "display_name": "Python [conda env:mf_main]",
+   "display_name": "Python [conda env:mf_main] *",
    "language": "python",
    "name": "conda-env-mf_main-py"
   },
