Removed exampleJob folder

--- a/ipyrun/_ipyeditjson.ipynb
+++ b/ipyrun/_ipyeditjson.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
     "                '_recursive_guess':self._recursive_guess,\n",
     "                'ipysheet':self._ipysheet,\n",
     "                'ipyagrid':self._ipyagrid,\n",
-    "                'FileChooser':self._file_chooser\n",
+    "                'FileChooser':self._file_picker\n",
     "            }\n",
     "            \n",
     "            self.widget_lkup_di = dict(self.standard_widgets, **self.mfcustom_widgets)\n",
@@ -285,22 +285,33 @@
     "                                              layout=widgets.Layout(width='5%'))\n",
     "            self.guide.observe(self._guide, 'value')\n",
     "            layout = widgets.HBox([self.widget_row ,self.guide],layout=self.MF_FORM_ITEM_LAYOUT2)\n",
+    "        elif self.widget_name == \"FileChooser\":\n",
+    "            if 'value' in self.kwargs:\n",
+    "                splitpath = os.path.split(os.path.realpath(self.kwargs['value']))\n",
+    "                fc_temp = FileChooser(filename=splitpath[1], path=splitpath[0], select_default=True)\n",
+    "            else:\n",
+    "                fc_temp = FileChooser()\n",
+    "            fc_temp.use_dir_icons = True\n",
+    "            fc_temp.register_callback(self._update_change)\n",
+    "            self.guide = fc_temp\n",
+    "            self.widget_simple = widgets.HBox([self.widget_only,self.guide],layout=self.MF_FORM_ITEM_LAYOUT)\n",
+    "            self.widget_row = widgets.HBox([_markdown(self.di['name']),self.widget_simple],layout=self.MF_FORM_ITEM_LAYOUT1)\n",
+    "            layout = widgets.HBox([self.widget_row,_markdown(self.di['label'])],layout=self.MF_FORM_ITEM_LAYOUT2)\n",
     "        else:\n",
     "            layout = widgets.HBox([self.widget_row],layout=self.MF_FORM_ITEM_LAYOUT2)\n",
     "        return layout\n",
-    "    \n",
+    "        \n",
     "    def _init_controls(self):   \n",
-    "        if(self.widget_name == \"FileChooser\"):\n",
-    "            self.widget_only.children[0].register_callback(self._update_change)\n",
-    "        else:\n",
-    "            self.widget_only.observe(self._update_change, 'value') \n",
+    "        self.widget_only.observe(self._update_change, 'value') \n",
+    "        return\n",
     "\n",
     "    def _update_change(self, change):\n",
     "        value = None\n",
     "        if(self.widget_name == \"DatePicker\"):\n",
     "            value = self.widget_only.value.strftime('%Y-%m-%d')\n",
     "        elif(self.widget_name == \"FileChooser\"):\n",
-    "            value = self.widget_only.children[0].selected\n",
+    "            self.widget_only.value = self.guide.selected_filename\n",
+    "            value = self.guide.selected\n",
     "        else:\n",
     "            value = self.widget_only.value\n",
     "        self.di['value'] = value\n",
@@ -490,16 +501,11 @@
     "        value = datetime.strptime(self.kwargs['value'], '%Y-%m-%d')\n",
     "        self.widget_only = widgets.DatePicker(value=value)\n",
     "\n",
-    "    def _file_chooser(self):\n",
-    "        \n",
-    "        if 'value' in self.kwargs:\n",
-    "            splitpath = os.path.split(os.path.realpath(self.kwargs['value']))\n",
-    "            fc_temp = FileChooser(filename=splitpath[1], path=splitpath[0], select_default=True)\n",
-    "        else:\n",
-    "            fc_temp = FileChooser()\n",
-    "        fc_temp.use_dir_icons = True\n",
-    "        self.widget_only = widgets.VBox([fc_temp])\n",
-    "        self.widget_only.layout=widgets.Layout(border='solid 1px #BBBBBB', padding='7px 7px 7px 7px', margin='5px 0px 5px 0px')\n",
+    "    def _file_picker(self):\n",
+    "        value = os.path.split(os.path.realpath(self.kwargs['value']))[1]\n",
+    "        self.widget_only = widgets.HTML(value)\n",
+    "        self.widget_only.layout=widgets.Layout(border='solid 1px #BBBBBB', padding='0px 10px 0px 10px')\n",
+    "\n",
     "    # --------------------------------------------------------------------------\n",
     "    \n",
     "    def display(self):\n",
@@ -512,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -888,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +924,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df93e49ebb7c40baafe999ff12d70dad",
+       "model_id": "16fec9cf8bd04a37a2de744b52dd45b6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -932,7 +938,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44256a133fe6446f8e947c16c0b08844",
+       "model_id": "71efc820653b47d18e1355415a71f4b7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -946,7 +952,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "644368c39f344da29d3ee7296ff59eea",
+       "model_id": "590195c00b62466aaa996b0a94777822",
        "version_major": 2,
        "version_minor": 0
       },
@@ -960,7 +966,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "084e048536d34ed3806e19de98a16ead",
+       "model_id": "4b590f4af400453fa1de0b3bd638ee87",
        "version_major": 2,
        "version_minor": 0
       },
@@ -974,7 +980,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d6643d7b08c6469f98fb68661679af33",
+       "model_id": "f4fef9ebe2074e14b3e84ee47389a586",
        "version_major": 2,
        "version_minor": 0
       },
@@ -988,7 +994,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2dbbab89f19d4186b406088df5082c1f",
+       "model_id": "9152817212d74af088c87b4bba29f41a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1002,7 +1008,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "58ee762447744f8db2c9ada881748572",
+       "model_id": "83bd0ffe37884445894d1576c3bd7525",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1016,7 +1022,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "99311a5d1af246fea35efef0486cec8c",
+       "model_id": "ad9b01c64b014742acd668b04ea2912d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1076,7 +1082,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c374f98361484c8695398d04ed4cfab0",
+       "model_id": "c16b376e9b5e4fdf9548dd27a162d4fe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1090,12 +1096,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "37c34e5282de461582cc05a4af4cd1f5",
+       "model_id": "3e9a78f70701421cb0083f133c2a57c8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(HBox(children=(HTML(value='<p>File Chooser</p>'), HBox(children=(VBox(children=(…"
+       "VBox(children=(HBox(children=(HBox(children=(HTML(value='<p>File Chooser</p>'), HBox(children=(HTML(value='doc…"
       ]
      },
      "metadata": {},
@@ -1104,7 +1110,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7869818418b45d89c059a62c6871642",
+       "model_id": "d79c2ba0065f4afa9661ebc289ff231e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1118,7 +1124,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "27593c67f48a4c6a8336fe0a4c16310d",
+       "model_id": "5b73efcd88ac4224ad4f0c682ae78b81",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1178,7 +1184,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "23bf2912a2124d2b9cc2ec6d015f1ea0",
+       "model_id": "bda110092f7042c6b5033ceae3311651",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1192,7 +1198,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2334f58185434e258b26e9d00f460742",
+       "model_id": "b04d48e0c2b64538b13351d7827d0097",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1206,7 +1212,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3960b42313354fbf83b4cd9e0c2371c7",
+       "model_id": "69b69b5204054689a292452f0e6f31d0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1266,7 +1272,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cd9c63989b3a4b5c9aa2790f742405d6",
+       "model_id": "929837f416c24dd4ad3445262c896fbf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1280,7 +1286,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc6c6e12f1ab4d9887f84a0f7fa69487",
+       "model_id": "84fe196fc25d4c45b47c963e7b0a9fdc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1294,7 +1300,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d7d8a15439044e182091a463a0e3000",
+       "model_id": "518f1175b2134480865870525c8b6684",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1366,7 +1372,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6c36e563c1b440f89532404049f869f7",
+       "model_id": "1a123d99affd441993d08e41f7c11bb8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1380,7 +1386,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f16e4921f8cb4146a6d1d9567240d3bf",
+       "model_id": "8dc550ebcc26415585d4b1e0b0dfc87a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1394,7 +1400,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ab1dd76eb3c479984e8c1d4b1b26ba1",
+       "model_id": "5b8a39ca85cd42b9ae98fa9430d32ee9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1408,7 +1414,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b9f4e421d01e4f93838d88bb50766701",
+       "model_id": "9a7fb3ae1a59417c9d509c689b607207",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1422,7 +1428,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "60c5a7962a53473a9b7f04c8d3d41a5d",
+       "model_id": "45307c961c2f42f7b3c3a5b381c71c36",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1436,7 +1442,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05d9e02e78024e2795a55f72a78aab06",
+       "model_id": "919b40e9259c45599d342821a8f91770",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1450,7 +1456,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "135e03b3f9ee41f99a22d3893af42135",
+       "model_id": "46a5411f3edf42b8aa16c73703c80a87",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1464,7 +1470,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5cf36ecd6961483da247704220c00c7e",
+       "model_id": "4dac5cd5356441e6b2ed1135f5926e5c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1478,7 +1484,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d6e33a03f88466daaa69e9e0a16158f",
+       "model_id": "531794545d1c470287d79c37e59aed13",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1492,7 +1498,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e680e7d1e31f47e089424dcb0fd4f2c9",
+       "model_id": "e802eb918bf64678b1b1083f87e9ba9a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1506,7 +1512,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "50c1bfd092f448738d20649b2fbdeafb",
+       "model_id": "67606e44a42e47c48052b7acaef6828a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1520,7 +1526,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cff4558d33ab4b4dbaf588eb36e863bf",
+       "model_id": "5d2a0cad742e49acac108eab0579d048",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1534,7 +1540,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4585a848e9c64e599e677bc27c699240",
+       "model_id": "7010fdfdf1d945368686eece17d96836",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1548,7 +1554,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ffff655836be4d14b94c3c1e945d5e87",
+       "model_id": "95ce4970900146fd93f65ab22786b050",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1608,7 +1614,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2c83aa10a47843f3a2d47a243ea83c0a",
+       "model_id": "fafdbb088a7e47759c220f31dc097523",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1622,7 +1628,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4827a6c41564cdab99d44891de7d152",
+       "model_id": "41e8e6461b534ad28ac858e572c423da",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1636,7 +1642,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a5fd5fc3e22645be9d9769312bdfbe10",
+       "model_id": "523466e45e604495a38906dd6df2deca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1696,7 +1702,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "12e074a096da4c3cba53caf8844cc738",
+       "model_id": "1eb9209d3a284ee087d12250eeb0a5c8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1710,7 +1716,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2da0e65173dc4072be3a586698997455",
+       "model_id": "a25a40d436a34d51b2b1cc498be5bb20",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1770,7 +1776,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e0924d877774f48997bd915a644f9fd",
+       "model_id": "02f4f96440da4c99a019005521de0333",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1784,7 +1790,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be1c26f1dd0741e1a04234ebef05a604",
+       "model_id": "38657ce6eece419baaefd565625fc4d0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1798,7 +1804,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7f8f5077a62f45869a9deb0d84076c65",
+       "model_id": "7e0356b68fe443ca92afec414292b1d4",
        "version_major": 2,
        "version_minor": 0
       },
