moved mfexcel_in to xlsx_templater made mfexcel_display its own function so more portable

--- a/ipyrun/_ipydisplayfile.ipynb
+++ b/ipyrun/_ipydisplayfile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,12 +22,13 @@
     "from mf_modules.jupyter_formatting import display_python_file\n",
     "from mf_modules.file_operations import open_file\n",
     "from mf_modules.pydtype_operations import read_json, read_txt, read_yaml\n",
-    "from mf_modules.datamine_functions import recursive_glob"
+    "from mf_modules.datamine_functions import recursive_glob\n",
+    "from mf_modules.excel_in import mfexcel_in"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,6 +49,7 @@
     "            'enableFilter': True,\n",
     "            'enableColResize': True,\n",
     "            'enableRangeSelection': True,\n",
+    "            'enableCellTextSelection':True\n",
     "        }\n",
     "        g = Grid(grid_data=df,\n",
     "                grid_options=grid_options,\n",
@@ -62,6 +64,7 @@
     "        'enableFilter': True,\n",
     "        'enableColResize': True,\n",
     "        'enableRangeSelection': True,\n",
+    "        'enableCellTextSelection':True\n",
     "    }\n",
     "    _kwargs = {\n",
     "        'grid_data':df,\n",
@@ -73,6 +76,17 @@
     "    _kwargs.update(kwargs)  # user overides\n",
     "    g = Grid(**_kwargs)\n",
     "    return g\n",
+    "\n",
+    "def mfexcel_display(fpth):\n",
+    "    \"\"\"\n",
+    "    displays mfexcel (written using xlsx_templater) using ipyaggrid\n",
+    "    \"\"\"\n",
+    "    li = mfexcel_in(fpth)\n",
+    "    for l in li:\n",
+    "        l['grid'] = default_ipyagrid(l['df'])\n",
+    "        display(Markdown('### {0}'.format(l['sheet_name'])))\n",
+    "        display(Markdown('{0}'.format(l['description'])))\n",
+    "        display(l['grid'])\n",
     "\n",
     "def _markdown(value='_Markdown_',\n",
     "              **kwargs):\n",
@@ -273,20 +287,14 @@
     "\n",
     "        \"\"\"\n",
     "        if self.mf_excel:\n",
-    "            cols = ['sheet_name','description']\n",
-    "            li = pd.read_excel(self.fpth,sheet_name='readme').set_index('index').T[cols].to_dict(orient='rows')\n",
-    "            for l in li:\n",
-    "                l['grid'] = default_ipyagrid(pd.read_excel(self.fpth,sheet_name=l['sheet_name']))\n",
-    "                display(Markdown('### {0}'.format(l['sheet_name'])))\n",
-    "                display(Markdown('{0}'.format(l['description'])))\n",
-    "                display(l['grid'])\n",
+    "            mfexcel_display(self.fpth)\n",
     "        else:\n",
     "            self._open_option()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -417,7 +425,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7262bc0d2c224a20b23d2d7feddb9b1b",
+       "model_id": "4fc66362f7124aa4bbda808d39fa4eb3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -486,7 +494,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "507bb1a328914903998f0b4c7637b7d2",
+       "model_id": "7270892104e64b3da74d1b97c3711757",
        "version_major": 2,
        "version_minor": 0
       },
@@ -546,7 +554,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e09d65ddc74448dc9fbc16b429cb3500",
+       "model_id": "89a56292837d48c1ba2d004f71089fb6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -584,7 +592,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "314f12e452394653b41649d556658289",
+       "model_id": "595fc1fb6b75410d9cf56a46e7e57e3f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -644,22 +652,6 @@
     "    display(Markdown('''example, with fpths_ignore and fpth_prefix'''))\n",
     "    display(d3)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
