typos, fixed example

--- a/ipyrun/_ipyeditcsv.ipynb
+++ b/ipyrun/_ipyeditcsv.ipynb
@@ -44,7 +44,7 @@
    "outputs": [],
    "source": [
     "class SimpleEditCsv():\n",
-    "    \"\"\"NOTE IN USE\"\"\"\n",
+    "    \"\"\"NOT IN USE\"\"\"\n",
     "    def __init__(self, fpth_in, fpth_out=None):\n",
     "        self.fpth_in = fpth_in\n",
     "        if fpth_out==None:\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,16 +168,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "lines_to_end_of_cell_marker": 2
    },
    "outputs": [],
    "source": [
     "class EditCsv(FileConfigController):\n",
+    "    \"\"\"\n",
+    "    for use when csv is the argument to a script\n",
+    "    \"\"\"\n",
     "\n",
     "    def __init__(self,config):\n",
     "        self.config = config\n",
@@ -253,8 +253,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [
     {
      "data": {
@@ -283,7 +285,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "98f4298d42a84e3f83cca6c50f5614b1",
+       "model_id": "820d1049982e4c5e992c6304559c111c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -322,7 +324,7 @@
     "\n",
     "    # FORM ONLY EXAMPLE\n",
     "    NBFDIR = os.path.dirname(os.path.realpath('__file__'))\n",
-    "    fpth = os.path.realpath(os.path.join(NBFDIR,r'..\\examples\\testcsv\\Ss_65_40_00_00-Ventilation_IndustryStandards.csv'))\n",
+    "    fpth = os.path.realpath(os.path.join(NBFDIR,r'..\\data\\eg_filetypes\\eg_csv.csv'))\n",
     "    \n",
     "    #fpth = r'C:\\engDev\\git_mf\\ipyrun\\examples\\notebooks\\appdata\\inputs\\inputs-expansion_vessel_sizing.json'\n",
     "    a = ShowHideEditCsv(fpth)\n",
@@ -331,8 +333,23 @@
     "    display(a)\n",
     "    display(Markdown('---'))  \n",
     "    display(Markdown('')) \n",
-    "    "
+    "    \n",
+    "    \n",
+    "    \n",
+    "    #b = EditCsv(fpth)\n",
+    "    #display(Markdown('### Example1'))\n",
+    "    #display(Markdown('''EditCsv'''))\n",
+    "    #display(b)\n",
+    "    #display(Markdown('---'))  \n",
+    "    #display(Markdown('')) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
